# financial-rag-bot

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  README.md  app.py  fly.toml  main.py  pyproject.toml  requirements.txt  test_query.py
data/index/: bm25.pkl  docs.json  faiss.index
data/processed/: docs.jsonl
ingestion/: build_index.py  parse_docs.py
llm/: orchestrator.py
retrieval/: retriever.py
static/app/: main.js  pdf.html  pdf_viewer.js
